# littlepasswordmanager

./: .gitignore  .nvmrc  Cargo.toml  LICENSE  README.md  REAME.md  index.html  package-lock.json  package.json
src/: App.vue  Pages.ts  binds.ts  database.rs  encrypt.rs  levenshtein.rs  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  encrypt.rs  levenshtein.rs  main.rs
src/components/: CreatePassword.vue  Delete.vue  Login.vue  Setup.vue  Spinner.vue  Toast.vue  ViewPassords.vue
