[package]
name = "little_password_manager"
version = "1.0.1"
description = "a local password manager"
authors = ["rhys trueman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
age = "0.10.0"
rand = "0.8.5"
sha256 = "1.5.0"
sqlite = "0.36.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
